objects/qbdialer__SeekInitiative__c.object
<CustomObject>
    <fields>
        <fullName>qbdialer__Attendees__c</fullName>
        <label>Attendees</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>fsharenone</fullName>
                </value>
                <value>
                    <fullName>fshareall</fullName>
                </value>
                <value>
                    <fullName>fsharegroups</fullName>
                </value>
                <value>
                    <fullName>fshareusers</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>qbdialer__CallbackGracePeriod__c</fullName>
        <defaultValue>30</defaultValue>
        <label>Callback Grace Period</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>qbdialer__CallbackPermission__c</fullName>
        <label>CallbackPermission</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>owner</fullName>
                </value>
                <value>
                    <fullName>all</fullName>
                </value>
                <value>
                    <fullName>account_teams</fullName>
                </value>
                <value>
                    <fullName>attendees</fullName>
                </value>
                <value>
                    <fullName>list</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>qbdialer__CallerID__c</fullName>
        <label>Caller ID</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>qbdialer__CallerIdType__c</fullName>
        <label>CallerIdType</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Company Phone</fullName>
                    <default>true</default>
                    <label>Company Phone</label>
                </value>
                <value>
                    <fullName>Custom Number</fullName>
                </value>
                <value>
                    <fullName>LocalPresence</fullName>
                </value>
                <value>
                    <fullName>Rep Station Phone</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>qbdialer__CallingHours__c</fullName>
        <label>CallingHours</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Business Hours</fullName>
                    <default>true</default>
                    <label>Business Hours</label>
                </value>
                <value>
                    <fullName>Consumer Hours</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>qbdialer__DialerInitiativeId__c</fullName>
        <label>Dialer Initiative Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>qbdialer__EmailFolders__c</fullName>
        <label>Email Folders</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>qbdialer__EndTime__c</fullName>
        <label>End Time</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>qbdialer__LimitCallingTimes__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Limit Calling Times</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>qbdialer__LimitCallsTo__c</fullName>
        <label>LimitCallsTo</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>owner</fullName>
                </value>
                <value>
                    <fullName>all</fullName>
                    <default>true</default>
                    <label>all</label>
                </value>
                <value>
                    <fullName>account_teams</fullName>
                </value>
                <value>
                    <fullName>No Limit</fullName>
                </value>
                <value>
                    <fullName>Account Team</fullName>
                </value>
                <value>
                    <fullName>Record Owner</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>qbdialer__Local_Presence_Bucket__c</fullName>
        <label>Local Presence Bucket</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>qbdialer__NoPhoneNumber__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Include records without phone numbers</description>
        <inlineHelpText>Include records without phone numbers</inlineHelpText>
        <label>No Phone Number</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>qbdialer__OnlyDialOwn__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Only Dial Own</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>qbdialer__Prevent_callbacks__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Prevent Callbacks</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>qbdialer__RingTimeout__c</fullName>
        <defaultValue>45</defaultValue>
        <label>RingTimeout</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>qbdialer__Show_Query__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show Query</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>qbdialer__SmartSort__c</fullName>
        <label>Neural Sort</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>On</fullName>
                </value>
                <value>
                    <fullName>Off</fullName>
                    <default>true</default>
                    <label>Off</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>qbdialer__StartTime__c</fullName>
        <label>Start Time</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>qbdialer__Test_Local_Presence__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Test Local Presence</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>qbdialer__TimeBetweenCalls__c</fullName>
        <label>Time Between Calls</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>qbdialer__UseSalesforceEmailTemplates__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Specifies whether users of the InsideSales PowerDialer will send emails using templates built in Salesforce or templates built in InsideSales.com</description>
        <inlineHelpText>Specifies whether users of the InsideSales PowerDialer will send emails using templates built in Salesforce or templates built in InsideSales.com</inlineHelpText>
        <label>Use Salesforce Email Templates</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>qbdialer__Use_Local_Presence__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use Local Presence</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>qbdialer__can_edit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Can Edit</label>
        <type>Checkbox</type>
    </fields>
    <label>Seek Initiative</label>
    <listViews>
        <fullName>qbdialer__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Seek Initiatives</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>